# hakutaku

./: .gitignore  .gitmodules
boot/grub/: grub.cfg
boot/grub/fonts/: unicode.pf2
boot/grub/i386-efi/: affs.mod  afs.mod  at_keyboard.mod  boottime.mod  bsd.mod  btrfs.mod  cacheinfo.mod  chain.mod  command.lst  core.efi  cryptodisk.mod  efi_gop.mod  efi_uga.mod  efinet.mod  (+52 more)
kern/: .gitignore  Cargo.toml  Makefile  README.md  bochsrc  build.rs  qemu_trace  x86_64-unknown-none.json
kern/src/: config.rs  gdt.rs  interrupts.rs  lib.rs  logger.rs  macros.rs  shell.rs
kern/src/arch/x86_64/: descriptor_table.rs  grub.cfg  init.asm  interrupt.asm  linker.ld  long_init.asm  mod.rs  multiboot.asm  smp_wakeup.asm  user_demo.asm
kern/src/device/: mod.rs
kern/src/device/ahci/: consts.rs  controller.rs  device.rs  mod.rs  structures.rs
kern/src/device/pci/: class.rs  consts.rs  device.rs  mod.rs
kern/src/device/uart/: mod.rs  serial16650.rs
kern/src/device/usb/: consts.rs  descriptor.rs  device.rs  error.rs  interrupt.rs  mod.rs
kern/src/device/usb/xhci/: consts.rs  datastructure.rs  device.rs  mod.rs  port.rs  registers.rs
kern/src/fs/: mod.rs  path.rs  traits.rs
kern/src/hardware/: apic.rs  keyboard.rs  mod.rs  pic.rs  pit.rs  resman.rs
kern/src/hardware/apic/: timer.rs
kern/src/init/: init.rs  mod.rs  smp.rs
kern/src/interrupts/: context_switch.rs  keyboard.rs  syscall.rs
kern/src/memory/: allocator.rs  frame_allocator.rs  mmio_bump_allocator.rs  mod.rs  paging.rs
kern/src/memory/allocator/: bin.rs  bump.rs
kern/src/pci/: class.rs  consts.rs  device.rs  ids.rs  mod.rs
kern/src/pci/device/xhci/: datastructure.rs  extended_capability.rs  mod.rs  port.rs  registers.rs
kern/src/process/: cpu.rs  mod.rs  process.rs  scheduler.rs  stack.rs  state.rs
kern/src/storage/: mod.rs
kern/src/storage/block/: device.rs  mod.rs
kern/src/storage/partition/: mbr.rs  mod.rs
kern/src/structure/: mod.rs  mpmc_queue.rs
kern/src/sys/: apic.rs  keyboard.rs  mod.rs  pic.rs  pit.rs  resman.rs  stdin.rs
kern/src/sys/apic/: timer.rs
kern/src/vga_buffer/: mod.rs
libs/core-io/: Cargo.toml
libs/kernel_api/: Cargo.toml
libs/stack-vec/: Cargo.toml
libs/x86lib/: Cargo.toml
tools/: pt.py
(+15 files in other folders)
