[package]
name = "kern"
version = "0.1.0"
authors = ["codetector <codetector@codetector.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
pc-keyboard = "0.5.0"
x86_64 = { path="../libs/x86_64" }
cpuio = "^0.2.0"
spin = "^0.5.2"
multiboot2 = "^0.8.2"
volatile = { version="^0.2.6", features=["const_fn"] }
hashbrown = "0.7.2"
log = "^0.4.8"
bitflags="1.2.1"
pretty-hex="0.1.1"
stack-vec = { path="../libs/stack-vec" }
kernel_api = { path="../libs/kernel_api" }
[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[package.metadata.cargo-xbuild]
memcpy = true
